add create styles

--- a/AirBox/style/style.css
+++ b/AirBox/style/style.css
@@ -1849,7 +1849,7 @@ label {
 }
 /*------------HEALTH-------------------*/
 .health {
-    background: url(../img/bg-health2.jpg) center no-repeat;
+    background: url(../img/bg_health-cloud.jpg) center no-repeat;
     padding-top: 140px;
 }
 .health__text2 {
